--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ashr"]
+	path = ashr
+	url = https://github.com/stephens999/ashr
+	shallow = true
+	registered = true
